# py_aseprite

./: .gitignore  README.md  README.org  pyproject.toml
aseprite/: __init__.py  chunks.py  headers.py
src/aseprite/: __init__.py  chunks.py  headers.py
